syntax = "proto3";

import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.azilzor.springflix.movie";

message MovieDto {
  int32 id = 1;
  string title = 2;
  int32 year = 3;
  double rating = 4;
}

message MovieSearchRequest {common.Genre genre = 1;}

message MovieSearchResponse {repeated MovieDto movies = 1;}

service MovieService {
  rpc getMovies(MovieSearchRequest) returns (MovieSearchResponse);
}