syntax = "proto3";

import "common/common.proto";

option java_multiple_files = true;
option java_package = "com.azilzor.springflix.user";

message UserSearchRequest {string login_id = 1;}

message UserResponse {
  int32 id = 1;
  string login_id = 2;
  string name = 3;
  common.Genre genre = 4;
}

message UserGenreUpdateRequest {
  string login_id = 1;
  common.Genre genre = 2;
}

service UserService {
  rpc getUserGenre(UserSearchRequest) returns (UserResponse);
  rpc updateUserGenre(UserGenreUpdateRequest) returns (UserResponse);
}